# cellogram

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  ci.ps1
.github/workflows/: cmake.yml
app/viewer/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  IconsFontAwesome5.h  UIMenu.cpp  UIState.cpp  UIState.h  UI_editor.cpp  UI_visualization.cpp  fa-solid-900.hpp  main.cpp
app/viewer/resources/: DS_Store  MacOSXBundleInfo.plist.in  README.md  im.icns  im.rc
cmake/: CellogramDownloadExternal.cmake  FindGUROBI.cmake  FindLIBIGL.cmake  SetWarnings.cmake  StaticRuntime.cmake  geogram.cmake
data/: 1-1.txt  1.xyz  2.xyz  3.xyz  5.xyz  8.xyz  mask.txt  pval.txt  single.xyz  small.xyz  tiny.xyz
misc/: CMakeLists.txt  adaptive_test.cpp  delaunay.cpp  image_test.cpp  optimizer.cpp  pts_detection.cpp  pts_untangler.cpp  tif_test.cpp
misc/TFR_Python/: TractionForceReconstruction.py  __init__.py
misc/TFR_Python/Classes/: AdaptiveMeshing.py  BC_Application.py  CAE_Container.py  ExportResults.py  __init__.py
misc/TFR_Python/Functions/: CSVWrite.py  CheckModelSize.py  GetClusterPaths.py  GetPCircle.py  ReadInput.py  __init__.py
misc/TFR_Python/Interpolation/: FindTriangle.py  RBF.py  TriangularLinear.py  __init__.py
misc/cellogram_viewer/: CMakeLists.txt
misc/delaunay_test/: CMakeLists.txt  delaunay.cpp  pts_detection.cpp  pts_untangler.cpp  tcdf_test.cpp
script/: README.md  ReadJson.m  batch_cellogram.m  read_json.m  read_vtk.m
script/DispArea/: DispArea.m  DispArea_force.m  data.mat  temp.m
script/Material_Model/: StrainStressTest_10_to_9.mat  StrainStressTest_9_to_10.mat  linear_fit.m  neo_hook.m
src/: CMakeLists.txt
src/cellogram/: CMakeLists.txt  Mesh.cpp  Mesh.h  Mesh3d.cpp  Mesh3d.h  MeshUtils.cpp  MeshUtils.h  PNGOutput.cpp  PNGOutput.h  PolygonUtils.cpp  PolygonUtils.h  Region.cpp  Region.h  State.cpp  State.h  StringUtils.cpp  StringUtils.h  boundary_loop.cpp  boundary_loop.h  common.cpp  common.h  convex_hull.cpp  convex_hull.h  delaunay.cpp  delaunay.h  dijkstra.cpp  dijkstra.h  extrude_mesh.cpp  extrude_mesh.h  fitGaussian2D.cpp  fitGaussian2D.h  image_reader.cpp  image_reader.h  interpolate.cpp  interpolate.h  laplace_energy.cpp  laplace_energy.h  load_points.cpp  load_points.h  mesh_solver.cpp  (+19 more)
src/cellogramViewer/: CMakeLists.txt  file_dialog.cpp  main.cpp
src/delaunayTest/: CMakeLists.txt  delaunay.cpp
src/gurobiImplementation/: CMakeLists.txt  generateQ.cpp  generateQ.h  gurobiModel.cpp  gurobiModel.h  main.cpp  state.cpp  state.h
src/gurobiImplementation/Data/2/: V_border.txt  V_internals.txt  neigh.txt
src/gurobiImplementation/cmake/: FindGUROBI.cmake
src/gurobiImplementation/data/1/: V_border.txt  neigh.txt
src/gurobi_solver/: CMakeLists.txt  generateQ.cpp  generateQ.h  gurobiModel.cpp  gurobiModel.h  main.cpp  state.cpp  state.h
src/gurobi_solver/data/1/: V_internals.txt
src/pointsUntangler/: CMakeLists.txt  PointsUntangler.cpp  PointsUntangler.h  grid.cpp  grid.h  mesh.cpp  mesh.h  mesh_delaunay.cpp  mesh_to_grid.cpp  my_assert.h  points_untangler.cpp  points_untangler.h  spatial_index.cpp  spatial_index.h  vec2.h
src/points_untangler/: CMakeLists.txt  __cellogram_standalone.pro  __main.cpp  grid.cpp  grid.h  mesh.cpp  mesh.h  mesh_delaunay.cpp  mesh_io.cpp  mesh_to_grid.cpp  my_assert.h  orient2D.cpp  points_untangler.cpp  points_untangler.h  vec2.h
src/tcdf/: CMakeLists.txt  ctcdf.cpp  ctcdf.h  ctcdf_emxAPI.cpp  ctcdf_emxAPI.h  ctcdf_emxutil.cpp  ctcdf_emxutil.h  ctcdf_initialize.cpp  ctcdf_initialize.h  ctcdf_terminate.cpp  ctcdf_terminate.h  ctcdf_types.h  gammaln.cpp  gammaln.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  tcdf.cpp  tcdf.h
src/viewer/: file_dialog.cpp  main.cpp
src/zebrafish/: Bspline.cpp  Bspline.h  CMakeLists.txt  Common.h  Cylinder.cpp  Cylinder.h  Logger.cpp  Logger.hpp  Optimization.cpp  Optimization.h  Quad.ipp  Quadrature.cpp  Quadrature.h  Quantile.cpp  Quantile.h  autodiff.h
tests/: CMakeLists.txt  CylinderTest.cpp  InterpTest.cpp  OptimDepthTest.cpp  OptimTest.cpp  delaunay.cpp  main.cpp
